Add tailwind css, update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -10,11 +8,12 @@
 /coverage
 
 # next.js
-/.next/
+/renderer/.next/
 /out/
 
 # production
 /build
+/main
 
 # misc
 .DS_Store
