--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@types/node": "^14.18.63",
     "@types/react": "^16.14.52",
     "@types/react-dom": "^16.9.24",
+    "autoprefixer": "^10.4.20",
     "electron": "^27.1.2",
     "electron-builder": "^24.9.1",
     "next": "latest",
+    "postcss": "^8.4.47",
     "rimraf": "^3.0.2",
+    "tailwindcss": "^3.4.13",
     "typescript": "^4.9.5"
   },
   "build": {
